--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   },
   "dependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
     "path": "^0.12.7",
     "phaser": "^3.50.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "style-loader": "^3.3.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack-dev-server": "^4.3.0"
