--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "phaser": "^3.50.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "socket.io-client": "^4.2.0",
     "style-loader": "^3.3.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
